# saved-game-format

./: CMakeLists.txt  README.rst  example2.tar.bz2  example2.tar.xz
example/: file2.json
example/dir1/: file3.json
example2/ships/: Llama.begin.json
src/: CMakeLists.txt  main.cpp  options.cpp  options.h  sgf_file.cpp  sgf_file.h
