MESSAGE(STATUS "Processing ${CMAKE_CURRENT_SOURCE_DIR}")
SET(SGF_INCLUDES "")
SET(SGF_LIBS "")

#  FIX: Add iostreams
FIND_PACKAGE(Boost COMPONENTS filesystem iostreams json log program_options system REQUIRED)
MESSAGE(STATUS "Found Boost Library Version: ${Boost_MAJOR_VERSION}.${Boost_MINOR_VERSION}.${Boost_SUBMINOR_VERSION}")
MESSAGE(STATUS "Boost Libraries: ${Boost_LIBRARIES}")
LIST(APPEND SGF_INCLUDES ${Boost_INCLUDE_DIRS})
LIST(APPEND SGF_LIBS ${Boost_LIBRARIES})

FIND_PACKAGE(LibArchive REQUIRED)
LIST(APPEND SGF_INCLUDES ${LibArchive_INCLUDE_DIRS})
LIST(APPEND SGF_LIBS ${LibArchive_LIBRARIES})

FIND_PACKAGE(ZLIB REQUIRED)
MESSAGE(STATUS "Found ZLib Library Version: ${ZLIB_VERSION}")
LIST(APPEND SGF_INCLUDES ${ZLIB_INCLUDE_DIR})
LIST(APPEND SGF_LIBS ${ZLIB_LIBRARIES})

SET(SGF_SOURCES
    options.cpp
    main.cpp
    sgf_file.cpp
)

SET(SGF_EXE_NAME "saved-game-format")
ADD_EXECUTABLE(${SGF_EXE_NAME} ${SGF_SOURCES})
SET_PROPERTY(TARGET ${SGF_EXE_NAME} PROPERTY CXX_STANDARD 14)
SET_PROPERTY(TARGET ${SGF_EXE_NAME} PROPERTY CXX_STANDARD_REQUIRED TRUE)
SET_PROPERTY(TARGET ${SGF_EXE_NAME} PROPERTY CXX_EXTENSIONS ON)

TARGET_INCLUDE_DIRECTORIES(
    ${SGF_EXE_NAME}
    SYSTEM PRIVATE
    ${SGF_INCLUDES}
)
TARGET_INCLUDE_DIRECTORIES(
    ${SGF_EXE_NAME}
    PRIVATE
    # SGF headers
    ${SavedGameFormat_SOURCE_DIR}/include
)

TARGET_LINK_LIBRARIES(
    ${SGF_EXE_NAME}
    ${SGF_LIBS}
)
